# motion-sdk-cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py
.github/workflows/: main.yml  test.yml
example/: CMakeLists.txt  example.cpp  example_stream_csv.cpp
include/: Client.hpp  Format.hpp  LuaConsole.hpp
include/detail/: endian.hpp  endian_to_native.hpp
src/: Client.cpp  Format.cpp
test/: CMakeLists.txt  mock_sdk_server.py  test.cpp  test_client.cpp  test_format.cpp  test_server.py
